--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,62 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+.ToDoBox{
+  /* background-color: rgb(255, 144, 240); */
+  /* background-image: linear-gradient(to bottom right, rgb(123, 0, 224), rgb(255, 0, 200)); */
+  background-image: linear-gradient(to bottom right, rgb(43, 181, 223), rgb(0, 30, 202));
+  display: flex;
+  align-items: center;
+  align-content: center;
+  height: 100vh;
+  
+}
+h1{
+  width: 100%;
+  padding: 5px 0;
+  text-align: center;
+  background-color: rgb(39, 94, 182);
+  color: white;
+}
+.ToDo{
+  background-color: rgb(238, 238, 238);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  width: 70ch;
+  height: 90vh;
+  margin: auto;
+  border-radius: 10px; 
+  overflow: auto;
+}
+.form{
+  text-align: center;
+  margin: auto;
+  width: 80%;
+}
+.listBox{
+  height: calc(100% - 374.71px);
+}
+.list{
+  height: 100%;
+  margin: auto;
+  width: 80%;
+  overflow: auto;
+  min-height: 192px;
+}
+
+@media only screen and (max-width: 600px), (orientation:landscape) and (max-height : 70 0px){
+  .ToDo{
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+  .list{
+    height: auto;
+  }
+}
