--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 /* Removed Extra code from index.css file that was pre-written by react ... */
+
 *{
   margin: 0;
   padding: 0;
@@ -47,7 +48,7 @@ h1{
   min-height: 192px;
 }
 
-@media only screen and (max-width: 600px), (orientation:landscape) and (max-height : 70 0px){
+@media only screen and (max-width: 600px), (orientation:landscape) and (max-height : 700px){
   .ToDo{
     width: 100%;
     height: 100%;
